BEGIN;

CREATE TABLE IF NOT EXISTS users (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  full_name VARCHAR(100) NOT NULL CHECK (char_length(trim(full_name)) >= 2),
  email VARCHAR(254) NOT NULL UNIQUE CHECK (email = lower(email)),
  password_hash VARCHAR(100) NOT NULL CHECK (char_length(password_hash) >= 50),
  role VARCHAR(20) NOT NULL CHECK (role IN ('teacher', 'student')),
  is_active BOOLEAN NOT NULL DEFAULT TRUE,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS exams (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  title VARCHAR(200) NOT NULL CHECK (char_length(trim(title)) >= 2),
  course VARCHAR(200) NOT NULL CHECK (char_length(trim(course)) >= 2),
  description TEXT NOT NULL DEFAULT '',
  duration_minutes INTEGER NOT NULL CHECK (duration_minutes BETWEEN 1 AND 480),
  passing_score INTEGER NOT NULL DEFAULT 60 CHECK (passing_score BETWEEN 0 AND 100),
  status VARCHAR(20) NOT NULL DEFAULT 'draft' CHECK (status IN ('draft', 'open', 'closed')),
  questions JSONB NOT NULL DEFAULT '[]'::JSONB,
  created_by INTEGER NOT NULL REFERENCES users(id) ON DELETE RESTRICT,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  CONSTRAINT exams_questions_is_array CHECK (jsonb_typeof(questions) = 'array')
);

CREATE TABLE IF NOT EXISTS submissions (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  exam_id INTEGER NOT NULL REFERENCES exams(id) ON DELETE CASCADE,
  student_id INTEGER NOT NULL REFERENCES users(id) ON DELETE CASCADE,
  answers JSONB NOT NULL DEFAULT '{}'::JSONB,
  score INTEGER NOT NULL CHECK (score BETWEEN 0 AND 100),
  correct_answers INTEGER NOT NULL CHECK (correct_answers >= 0),
  total_questions INTEGER NOT NULL CHECK (total_questions >= 0),
  submitted_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  CONSTRAINT submissions_answers_is_object CHECK (jsonb_typeof(answers) = 'object'),
  CONSTRAINT submissions_correct_count_valid CHECK (correct_answers <= total_questions)
);

CREATE TABLE IF NOT EXISTS audit_logs (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  actor_id INTEGER REFERENCES users(id) ON DELETE SET NULL,
  action VARCHAR(100) NOT NULL,
  entity_type VARCHAR(50) NOT NULL,
  entity_id INTEGER,
  request_id VARCHAR(100),
  metadata JSONB NOT NULL DEFAULT '{}'::JSONB,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  CONSTRAINT audit_metadata_is_object CHECK (jsonb_typeof(metadata) = 'object')
);

CREATE OR REPLACE FUNCTION set_updated_at()
RETURNS TRIGGER AS $$
BEGIN
  NEW.updated_at = CURRENT_TIMESTAMP;
  RETURN NEW;
END;
$$ LANGUAGE plpgsql;

DROP TRIGGER IF EXISTS exams_set_updated_at ON exams;
CREATE TRIGGER exams_set_updated_at
BEFORE UPDATE ON exams
FOR EACH ROW EXECUTE FUNCTION set_updated_at();

CREATE INDEX IF NOT EXISTS idx_users_role ON users(role);
CREATE INDEX IF NOT EXISTS idx_exams_status ON exams(status);
CREATE INDEX IF NOT EXISTS idx_exams_created_by ON exams(created_by);
CREATE INDEX IF NOT EXISTS idx_exams_questions_gin ON exams USING GIN(questions);
CREATE INDEX IF NOT EXISTS idx_submissions_student ON submissions(student_id, submitted_at DESC);
CREATE INDEX IF NOT EXISTS idx_submissions_exam ON submissions(exam_id, submitted_at DESC);
CREATE INDEX IF NOT EXISTS idx_submissions_answers_gin ON submissions USING GIN(answers);
CREATE INDEX IF NOT EXISTS idx_audit_actor ON audit_logs(actor_id, created_at DESC);
CREATE INDEX IF NOT EXISTS idx_audit_entity ON audit_logs(entity_type, entity_id);
CREATE INDEX IF NOT EXISTS idx_audit_metadata_gin ON audit_logs USING GIN(metadata);

COMMIT;
